--- a/public/journals/1/journalStyleSheet.css
+++ b/public/journals/1/journalStyleSheet.css
@@ -25,7 +25,8 @@
     margin-left: 0;
     margin-right: 0;
     margin-top: 19px;
-    text-align: left ;
+    position: relative;
+    text-align: center;
 }
 
 #content ol {
@@ -267,13 +268,6 @@ td.value {
     padding: 8.875px;
 }
 
-#content {
-    left: 10%;
-    position: relative;
-    text-align: center;
-    width: 750px;
-}
-
 tr td p {
     margin-left: 15px;
     margin-right: 15px;
@@ -357,7 +351,7 @@ html body {
     	padding: 0;
 		background: url(http://water-ca.org/ej/public/journals/mobileHeader_en.png) no-repeat;
 		height: 50px;
-		background-size: 24%;
+		background-size: 50%;
 		
 	}
 	
@@ -371,16 +365,7 @@ html body {
 		background: none;
 		display: none;
 	}
-	
 
-	#navbar{
-		width: 500px;
-	}
-	
-	#content {
-		width: 500px;	
-	}
-	
 	ul.menu {
 		width:100%;
 	}
@@ -396,7 +381,9 @@ html body {
 	#additionalHomeContent p {
 		width: 100%;
 	}
-	
+	#sidebar {
+		display: none; /* отключение языковых настроек*/
+	}
 }
 @media (min-device-width: 1024px ) {
 	
@@ -413,5 +400,8 @@ html body {
 	}
 	#body {
 		width: 950px;
+	}
+	#content {
+		width: 750px;
 	}
 }
