--- a/public/journals/1/journalStyleSheet.css
+++ b/public/journals/1/journalStyleSheet.css
@@ -1,7 +1,5 @@
 
-#about {
-    padding: 8.875px;
-}
+
 
 #about a {
     font-family: Georgia;
@@ -24,10 +22,6 @@
     padding-bottom: 15px;
 }
 
-#current {
-    padding: 8.875px;
-}
-
 #header {
     height: auto;
 }
@@ -43,10 +37,6 @@
 	padding-left: 12%;
 	}
 
-#home {
-    padding: 8.875px;
-}
-
 #home a {
     font-size: 15px;
 }
@@ -54,10 +44,6 @@
 #journalDescription em strong {
     color: #000000;
     text-transform: none;
-}
-
-#login {
-    padding: 8.875px;
 }
 
 #navbar {
@@ -123,10 +109,6 @@ a:hover {
     margin-left: 874px;
     margin-top: -120px;
     position: absolute;
-}
-
-#search {
-    padding: 8.875px;
 }
 
 #searchForm {
@@ -378,5 +360,32 @@ html body {
 	}
 	#content {
 		padding-top: 1.5em;
+	}
+	ul.menu li {
+		display: table-cell;
+	}
+	ul.menu {
+		display: table-row;
+	}
+	ul.menu a {
+		font-size: 0.85em;
+		text-transform: uppercase;
+		display: table-cell;
+		vertical-align: middle;
+	}
+	#about {
+		padding: 8.875px;
+	}
+	#current {
+		padding: 8.875px;
+	}
+	#home {
+		padding: 8.875px;
+	}
+	#login {
+		padding: 8.875px;
+	}
+	#search {
+		padding: 8.875px;
 	}
 }
