--- a/ej/public/journals/1/journalStyleSheet.css
+++ b/ej/public/journals/1/journalStyleSheet.css
@@ -102,12 +102,6 @@ a:hover {
     font-size: 14px;
 }
 
-#rightSidebar {
-    margin-left: 874px;
-    margin-top: -120px;
-    position: absolute;
-}
-
 #searchForm {
     font-size: 14px;
 }
@@ -302,10 +296,7 @@ html body {
 		background: none;
 		display: none;
 	}
-
-	#sidebar {
-		display: none; /* отключение языковых настроек*/
-	}
+	
 	journalDescription em {
 		padding-bottom: 1em;
 	}
@@ -316,9 +307,25 @@ html body {
 	input.textField {
 		width: 95%
 	}
-	#open {
-
-
+		
+	#content{
+		padding-left: 10px;
+		padding-right: 10px;
+	}
+	
+	#navbar.menuClose{
+  		display:none;
+	}
+	#navbar.menuClose.open{
+ 		 display: block;
+	}
+	.fa.fa-bars{
+		padding-left:10px;
+	}
+	#rightSidebar{
+		position: absolute;
+		margin-left:80%;
+		margin-top:-50px;
 	}
 }
 
@@ -381,4 +388,9 @@ html body {
 	i.fa.fa-bars {
 		display: none;
 	}
+	#rightSidebar {
+    margin-left: 874px;
+    margin-top: -120px;
+    position: absolute;
+}
 }
