--- a/full version/ej/public/journals/1/usersStyle.css
+++ b/full version/ej/public/journals/1/usersStyle.css
@@ -21,11 +21,24 @@
 	#container{
 		width:100% !important;
 	}
-#headerTitle h1 {
-    margin: 0;
-    padding: 0;
-    background: url(http://water-ca.org/ej/public/journals/mobileHeader_en.png) no-repeat;
-    height: 50px;
-    background-size: 50%;
-}
+	#headerTitle h1 {
+		display:none;
+	}
+	.fa.fa-bars{
+		margin-top:-10%;
+	}
+	#signinTable{
+		width:35%;
+	}
+	#signinForm p{
+		width:33%;
+	}
+	ul.menu li {
+		font-size: 2.8em !important;
+	}
+	#sidebarLanguageToggle img {
+		position: absolute;
+		margin-left: -20px;
+		margin-top: 26px;
+	}
 }
