--- a/full version/ej/public/journals/1/journalStyleSheet.css
+++ b/full version/ej/public/journals/1/journalStyleSheet.css
@@ -36,8 +36,8 @@
     background-color: #23A3D2;
     font-family: Georgia;
     padding: 5px;
-	font-size: 88%;
-    width: 101%;
+	font-size: 86%;
+    width: 100%;
 }
 
 #navbar a {
@@ -66,7 +66,7 @@ a:hover {
 }
 
 #onlineSubmissions p {
-    margin-botom: 10px;
+    margin-bottom: 10px;
     margin-top: 1px;
 }
 
@@ -210,10 +210,6 @@ td.value {
     color: black;
 }
 
-#userHome {
-    padding: 8.875px;
-}
-
 tr td p {
     margin-left: 15px;
     margin-right: 15px;
@@ -354,6 +350,24 @@ html body {
 	#headerTitle {
    		 width: 85%;
 	}
+	ul.menu{
+		padding-left: 5% !important;
+		list-style: none;
+	}
+	#content ul.menu li a {
+		font-size: 0.5em;
+	}
+	/**
+	* Add responsive design for tables
+	*/
+	.table-responsive {
+    width: 100%;
+    margin-bottom: 15px;
+    overflow-y: hidden;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+    border: 1px solid #ddd;
+	min-height: .01%;
+    overflow-x: auto;
 }
 
 @media (min-device-width: 1024px ) {
@@ -432,4 +446,7 @@ html body {
 	background-color: none;
 	margin-left:-15%;
 	}
+	#userHome {
+    padding: 8.875px;
+}
 }
